--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ django-celery==3.3.1
 django-imagekit==4.0.2
 django-rest-framework==0.1.0
 djangorestframework==3.11.0
+drf-api-tracking==1.7.5
+drf-logger==0.1.0
 future==0.18.2
 importlib-metadata==1.7.0
 kombu==4.6.11
