--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-rest-framework==0.1.0
 djangorestframework==3.11.0
 drf-api-tracking==1.7.5
 drf-logger==0.1.0
+drf-pretty-exception-handler==0.1.1
 future==0.18.2
 importlib-metadata==1.7.0
 kombu==4.6.11
